# apart_attested_agents

./: README.md  pyproject.toml  requirements.txt
examples/: autogen_demo.py  langgraph_mockup_demo.py  verify_tamper_demo.py
ledger/: __init__.py
ledger/chain/: __init__.py
ledger/crypto/: __init__.py  hashing.py  keys.py
ledger/verify/: __init__.py
tests/: test_crypto.py  test_package.py
