[tool.poetry]
name = "ledger"
version = "0.1.0"
description = "Cryptographically attested, tamper-evident logs for multi-agent AI conversations"
authors = ["Krakalus"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Krakalus/ledger"
homepage = "https://github.com/Krakalus/ledger"
keywords = ["cryptography", "ai-agents", "tamper-evident", "signed-logs", "ed25519"]
packages = [{ include = "ledger" }]
include = ["README.md", "LICENSE"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^46.0"
jcs = "^0.2"               # JSON Canonicalization Scheme (RFC 8785)

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^5.0"
langchain-core = "^1.2.7"
langgraph = "^1.0.7"
langchain-openai = "^1.1.7"
pyautogen = "0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"